[INFER] Trap fixes when rejoining to interpreter, bug 659337.